--- a/login.html
+++ b/login.html
@@ -4,47 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Login </title>
-    <style>
-        body {
-            font-family: 'Times New Roman', Times, serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh
-            background-color: beige;   
-        }
-        .login-container {
-            background-color:azure
-            padding: 40px;
-            border-radius: 20px;
-            width: 350px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);   
-        }
-        input {
-            display: block;
-            width: 80%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            align-items: center;
-            align-content: center;
-        }
-        button {
-            width: 75%;
-            padding: 10px;
-            background-color: cadetblue;
-            color: rgb(255, 255, 255);
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            align-items: center;
-            align-content: center;
-        }
-        button:hover {
-            background-color:darkcyan
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="login-container">
