--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
             <label for = "cpf">CPF:</label>
             <input type="text" id="cpf" placeholder="Digite seu CPF">
 
-            <label for="senha">Senha:</label>
+            <label for="senha">senha:</label>
             <input type="password" id="senha" placeholder="Digite sua senha">
             <button type="submit">Entrar</button>
         </form>   
